2009-08-11  Bin Li  <bili@novell.com>
	* nortel/gui/Makefile.am:
	* nortel/cli/Makefile.am:
	* nortel/common/Makefile.am:
	* nortel/ike/Makefile.am:
	Use the plugindir to specify where to put the plugins.
2009-06-04  Bin Li  <bili@novell.com>
	* COPYING:
	Add GPL v2 copying.
2009-05-27  Bin Li  <bili@novell.com>
	* *.[ch]:
	Add copyright information for GPL v2.
2009-03-04  Bin Li  <bili@novell.com>
	* nortel/gui/Makefile.am:
	* nortel/cli/Makefile.am:
	* nortel/ike/Makefile.am:
	Plugin doesn't need to be versioned.
2009-02-24  Bin Li  <bili@novell.com>
	* nortel/cli/nortelcli.h:
	* nortel/cli/adminport.c:
	* nortel/ike/fwinterface.c:
	Support the secondary DNS setting.
2009-02-19  Bin Li  <bili@novell.com>
	* dnsupdate:
	* nortel/ike/utility.h:
	* nortel/ike/utility.c:
	* nortel/ike/nortel_inf.h:
	* nortel/ike/callbacks.c:
	* nortel/ike/fwinterface.c:
	Don't set the DNS and Domain Name when use NM.
	* nortel/ike/Makefile.am:
	Let the dnsupdate could be distributed.
	* README:
	dismiss the blank.
2009-02-09  Bin Li  <bili@novell.com>
	* NEWS:
	* README:
	* AUTHORS:
	add some missing file of automake.
2009-02-04  Bin Li  <bili@novell.com>
	* nortel/ike/utility.c:
	* nortel/ike/nortel_inf.h:
	* nortel/ike/utility.h:
	* nortel/ike/callbacks.c:
	* nortel/ike/Makefile.am:
	* nortel/ike/fwinterface.c:
	* Makefile.am:
	* dnsupdate:
	support the DNS and Domain Name setting.
2009-02-02  Bin Li  <bili@novell.com>
	* nortel/ike/nortel_inf.h:
	* nortel/ike/callbacks.c:
	dismiss the blank.
	* configure.in:
	upgrade the version to 0.1.4.
2009-01-22  Bin Li  <bili@novell.com>
	* ipalias:
	* nortel/ike/utility.c:
	* nortel/ike/nortel_inf.h:
	* nortel/ike/utility.h:
	* nortel/ike/callbacks.c:
	* nortel/ike/fwinterface.c:
	Support the "no split tunnel" feature.
2009-01-19  Bin Li  <bili@novell.com>
	* nortel/common/plog.h:
	Change the log level define follow the upstream.
2009-01-12  Bin Li  <bili@novell.com>
	* nortel/cli/profile.c:
	scanf's parameter, don't need use '\n' in it.